# gloop

./: .gitignore  Cargo.toml  LICENSE  flake.nix  sqlx-data.json
.github/workflows/: build.yml  ci.yml
migrations/: 20221002172706_init.up.sql  20221019094517_events.down.sql  20221019094517_events.up.sql  20221127100155_typed_outcome.down.sql  20221127100155_typed_outcome.up.sql
src/: macros.rs  main.rs
src/commands/: bet.rs  bet_admin_ender.rs  bet_admin_stopper.rs  buttontest.rs  leaderboards.rs  mod.rs  profile.rs  snipe.rs
