[package]
name = "gloop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arraytools = "0.1"
chrono = "0.4"
futures-util = "0.3"
rosu-v2 = { version = "0.4.0", default-features = false, features = ["rkyv"] }
serenity = { version = "0.11", default-features = false, features = ["client", "collector", "gateway", "model", "rustls_backend"] }
sqlx = { version = "0.6", features = ["chrono", "macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3", features = ["local-offset", "macros", "parsing"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
