[package]
name = "gloop"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serenity = { version = "0.11", default-features = false, features = ["client", "collector", "gateway", "model", "rustls_backend"] }
sqlx = { version = "0.6", features = ["chrono", "macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3", features = ["local-offset", "macros", "parsing"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
